# libbson-mini

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE.commercial.md  LICENSE.md  Makefile  README.md  bson_reader.c
src/: bson.c  bson.cpp  bson.h  bson.hpp
test/: CMakeLists.txt  bson.cpp  bson_c.cpp  bson_cpp.cpp
test/data/: data.bson
